tests/compose_backend_fail/unknown_method.stderr
error: unknown Canvas method `fil_path` — did you mean `fill_path`?
  --> tests/compose_backend_fail/unknown_method.rs:25:9
   |
25 |         fil_path => sw,
   |         ^^^^^^^^
